fixed the problem that images are not displayed under the test environment.

--- a/public/help.html
+++ b/public/help.html
@@ -16,7 +16,7 @@ ul.ul_level1 {
       <li>Basic statistical analysis and visualization of a specified “Slice”</li>
     </ul>
   </li>
-  <li><img width="640" src="/img/help/flow.png"></li>
+  <li><img width="640" src="img/help/flow.png"></li>
 </ul>
 
 <h2>How to use jPOST database</h2>
@@ -28,7 +28,7 @@ ul.ul_level1 {
       <li>Users can also specify species and disease metadata by clicking pie chart.</li>
     </ul>
   </li>
-  <li><img width="640" src="/img/help/search.png"></li>
+  <li><img width="640" src="img/help/search.png"></li>
   <li>2. Saving the filtered dataset</li>
   <li>
     <ul>
@@ -37,7 +37,7 @@ ul.ul_level1 {
       <li>Because the Slice data is stored in WebStorage of your browser, your data is never leaked to the Internet. The different browser in your computer is not shared WebStorage. So, you need to export and import the Slice to observe the same datasets in the different location (the different browser).</li>
     </ul>
   </li>
-  <li><img width="500" src="/img/help/slice_check.png"><img width="400" src="/img/help/slice_new.png"></li>
+  <li><img width="500" src="img/help/slice_check.png"><img width="400" src="img/help/slice_new.png"></li>
   <li>3. Comparing Slices</li>
   <li>
     <ul>
@@ -69,7 +69,7 @@ ul.ul_level1 {
 <h3>Chromosome Info.</h3>
 <ul class="ul_level1">
   <li>Histogram of detected leading proteins (blue) and the total number of proteins (gray) per chromosome, mitochondria and plasmid. The protein count is based on the count of UniProt entry (therefore, the total number of proteins doesn’t mean the exact number of coding genes in each chromosome). In human dataset, the protein count is based on the count of neXtProt entry.</li>
-  <li><img width="640" src="/img/help/chromosome.png"></li>
+  <li><img width="640" src="img/help/chromosome.png"></li>
 </ul>
 
 <h3>Protein Existence</h3>
@@ -81,7 +81,7 @@ ul.ul_level1 {
     </ul>
   </li>
   <li>The protein list is displayed from pulldown menu or a clickable legend/chart.</li>
-  <li><img width="500" src="/img/help/protein_level.png"></li>
+  <li><img width="500" src="img/help/protein_level.png"></li>
 </ul>
 
 <h3>KEGG Pathway Mapping</h3>
@@ -100,7 +100,7 @@ ul.ul_level1 {
       <li>'UniProt annotation' shows PTM sites and single amino acid variations descripted in UniProt.</li>
     </ul>
   </li>
-  <li><img width="640" src="/img/help/protein.png"></li>
+  <li><img width="640" src="img/help/protein.png"></li>
   <li>
     <ul>
       <li>zoom in/out with wheel/touchpad scroll</li>
@@ -122,7 +122,7 @@ ul.ul_level1 {
       <li>edit: remove the protein user do not need</li>
       </ul>
   </li>
-  <li><img width="640" src="/img/help/pep_share.png"></li>
+  <li><img width="640" src="img/help/pep_share.png"></li>
   <li>
     <ul>
       <li>zoom in/out with wheel/touchpad scroll</li>
@@ -134,7 +134,7 @@ ul.ul_level1 {
 <h2>Slice comparison</h2>
 <ul class="ul_level1">
   <li>Users can compare two slices by selecting Slices from pulldown menu.</li>
-  <li><img width="640" src="/img/help/compare.png"></li>
+  <li><img width="640" src="img/help/compare.png"></li>
 </ul>
 
 <h3>Differential Expression Analysis</h3>
@@ -142,7 +142,7 @@ ul.ul_level1 {
   <li>User can compare the expression level of proteins between two Slices by empirical Bayes estimate, Wilcoxon rank sum test and fold change of average from the pulldown menu. The quantification is based on spectral counting.</li>
   <li>The former two methods use R programming language library. These methods need at least 2 datasets in either Slice. In the volcano plot, users can change thresholds of the fold change and p-value by moving the triangle marker on x- and y-axis.</li>
   <li>The fold change of average expression level in a protein is shown as histogram like plot. Any statistical test is not applied, so p-value is not calculated. The y-axis shows pseudo frequency and has strictly little meaning.</li>
-  <li><img width="640" src="/img/help/diff_exp.png"></li>
+  <li><img width="640" src="img/help/diff_exp.png"></li>
   <li>
     <ul>
       <li>move threshold bars with drag of triangle markers</li>
@@ -154,7 +154,7 @@ ul.ul_level1 {
 <ul class="ul_level1">
   <li>Protein set enrichment analysis for selected proteins in the differential expression analysis. Users can select a target from KEGG pathway category and three categories of <a href="http://www.geneontology.org/">Gene Ontology</a> (GO) (biological process, molecular function and cellular component).</li>
   <li>The result is displayed by a network graph and a table. Nodes in the network show categories of KEGG or GO, and node color of enriched category varies yellow to red (p-value < 0.05, yellow shows high and red shows low). The blue node shows root category of network. Each node size reflects the number of selected proteins in the differential expression analysis. However, the size of white node and root node is limited up to the maximum size of enriched nodes colored from yellow to red to make network layout clearer. </li>
-  <li><img width="640" src="/img/help/enrich.png"></li>
+  <li><img width="640" src="img/help/enrich.png"></li>
   <li>
     <ul>
       <li>zoom in/out with wheel/touchpad scroll</li>
@@ -162,7 +162,7 @@ ul.ul_level1 {
     </ul>
   </li>
   <li>When the target is the KEGG pathway, users can map proteins to KEGG pathway map. The boxes of maps are colored blue to red (blue shows expression level is decrease and red shows increase). When a box corresponds to multiple proteins, box color reflects any one of proteins (It is a restriction of the KEGG mapper).</li>
-  <li><img width="640" src="/img/help/enrich_table.png"></li>
+  <li><img width="640" src="img/help/enrich_table.png"></li>
 </ul>
 
 <h2>Vocabularies</h2>
